# openemr

./: .dockerignore  .gitlab-ci.yml  .mcp.json  .railwayignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  Dockerfile  Dockerfile.railway  README.md  TASKS.md  USER.md  USERS.md  auto_configure.php  railway-entrypoint.sh  railway.json
oe-ai-agent/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  mypy.ini  pyproject.toml  railway.json  ruff.toml
oe-ai-agent/corpora/clinical-guidelines/: README.md  corpus_index.json
oe-ai-agent/evals/: README.md  common.py  run_brief_eval.py  run_chat_eval.py  run_eval.py
oe-ai-agent/evals/brief_fixtures/: 0003_stale_meds.json  0005_overdue_a1c.json  0008_empty_chart.json  0010_mixed_staleness.json  0012_pcn_amoxicillin_conflict.json
oe-ai-agent/evals/chat_fixtures/: chat_0001_active_meds.json  chat_0002_a1c_trend.json  chat_0003_immunizations.json  chat_0004_empty_allergies.json  chat_0005_multiturn_med_cache.json  chat_0006_med_advice_guard.json  chat_0101_indexed_lab_ldl.json  chat_0102_indexed_intake_smoking.json  chat_0103_indexed_document_manifest.json  chat_0104_indexed_source_evidence.json  chat_0105_unindexed_lab_extract.json  (+45 more)
oe-ai-agent/tests/: test_agent_graph.py  test_chat_eval_harness.py  test_chat_graph.py  test_chat_tools.py  test_conversation_store.py  test_document_extraction.py  test_get_lab_trend.py  test_guideline_rag.py  test_langfuse_observability.py  test_litellm_client.py  test_narrative_grounding.py  test_observability_trace.py  test_observability_usage.py  test_verifier.py
(+212 files in other folders)
